hphp/hack/test/typecheck/let/let_lambda_error.php.legacy.exp
File "let_lambda_error.php", line 8, characters 19-22:
Invalid argument (Typing[4110])
File "let_lambda_error.php", line 3, characters 24-29:
This is a string
File "let_lambda_error.php", line 6, characters 11-12:
It is incompatible with an int
